Fixed spacings

--- a/src/components/Accordian/Accordian.module.css
+++ b/src/components/Accordian/Accordian.module.css
@@ -17,7 +17,7 @@
 .itemTitleText {
   font-size: 1.8rem;
   font-weight: 600;
-  margin-bottom: 1.6rem;
+  margin-bottom: 2.4rem;
 }
 
 .itemBody {
@@ -28,7 +28,7 @@
   line-height: 2.2rem;
   pointer-events: none;
   color: var(--color-gray);
-  transition: all 0.14s ease-in-out;
+  transition: opacity 0.14s ease-in-out;
   max-height: 0;
 }
 
@@ -49,6 +49,6 @@
 }
 
 .itemOpen {
-  padding: 4.8rem 5.2rem;
+  padding: 4rem 5.2rem;
   background-color: var(--color-lightest-gray);
 }
